# rust-s3-scylladb

./: .Dockerignore  .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
data/: data_example.json
job/: .env  ingestion_job.py
k8s/: deploy.yaml
schema/: ddl.sql
src/: main.rs
src/config/: mod.rs
src/data/: mod.rs  model.rs  rest_api.rs  source_model.rs
src/db/: model.rs  scylladb.rs
src/errors/: mod.rs
src/s3/: mod.rs  s3.rs
