[package]
name = "rust-s3-scylladb-svc"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = "4.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
eyre = "0.6"
color-eyre = "0.6"
config = "0.11"
scylla = "0.6"
dotenv = "0.15"
num_cpus = "1.13"
rust-s3 = "0.32"
url = "2.2"
rayon = "1.5"
tokio = {version = "1.16", features = ["rt-multi-thread", "macros"]  }
tokio-stream = "0.1"
lazy_static = "1.4.0"
rand = "0.8.4"
uuid = { version = "1.1.2", features = ["serde", "v4", "v5"] }
chrono = "0.4.19"
http = "0.2"
serde_with = "~2"
futures = "0.3"
strum = "0.24"
strum_macros = "0.24"